# vsimple

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  all.cmake
.github/workflows/: deploy.yml
cmake/: CMakeLists.txt  all.cmake  vcompiler_traits.cmake
doc/: Doxyfile
modules/vcompiler_traits/: vcompiler_traits.cmake  vcompiler_traits.h
modules/vcompiler_traits/details/: vplatform.h
scripts/: build.sh  doc.sh  install.sh  test.sh
tests/: CMakeLists.txt
tests/test_modules/: test.cpp  test_modules.cmake
tests/test_modules/test_vcompiler_traits/: test_vcompiler_traits.cmake  test_vcompiler_traits.cpp  test_vcompiler_traits.h
vcompiler_traits/: README  vcompiler_traits.cmake  vcompiler_traits.h
vcompiler_traits/details/: vendian.h  vpretty_function.h
vcompiler_traits/dev_vcompiler_traits/: CMakeLists.txt  main.cpp
vcompiler_traits/test_vcompiler_traits/: CMakeLists.txt  main.cpp
